@@ -1,5 +1,10 @@
 2007-09-23  Dalibor Topic  <robilad@kaffe.org>
 
+	* kaffe/kaffevm/kaffe-gc/gc-incremental.c (finishGC)
+	(KaffeGC_WalkMemory): Use NULL instead of 0 where appropriate.
+
+2007-09-23  Dalibor Topic  <robilad@kaffe.org>
+
 	* kaffe/kaffevm/kaffe-gc/gc-refs.c (KaffeGC_addRef, KaffeGC_rmRef,
 	KaffeGC_addWeakRef, KaffeGC_rmWeakRef, KaffeGC_clearWeakRef): 
 	Added debugging statements.
